--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+asgiref==3.4.1
 cycler==0.11.0
+Django==3.2.9
 kiwisolver==1.3.2
 matplotlib==3.4.3
 numpy==1.21.3
@@ -8,4 +10,5 @@ pyparsing==3.0.3
 python-dateutil==2.8.2
 pytz==2021.3
 six==1.16.0
+sqlparse==0.4.2
 ta==0.8.0
